<resources>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="picture_description">Picture Description</string>
    <string name="favorite">Favorite</string>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="event_type">Event Type</string>
    <string name="event_description">Event Description</string>
    <string name="edit_event">Edit Event</string>

    <string-array name="event_types">
        <item>Festival</item>
        <item>Concert</item>
        <item>Exhibition</item>
        <item>Party</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_1">Timeline</string>
    <string name="text_label_2">Favorites</string>
    <string name="text_label_3">Maps</string>
    <string name="text_label_4">Calendar</string>
    <string name="unknown_user">Unknown User</string>
    <string name="user_info_title">User Info</string>
    <string name="user_photo_description">The user\'s photo from Google Account</string>
    <string name="accountname"> %1$s </string>
    <string name="accountmail"> %1$s </string>
    <string name="photos_button">Add-Photos</string>
    <string name="event_button">Add-Event</string>"
    <string name="preference_file_key">dk.itu.moapd.copenhagenbuzz.msem.PREFERENCE_FILE_KEY</string>
    <string name="share">Share</string>


    <string name="google_maps_key"
        templateMergeStrategy="preserve"
        translatable="false">YOUR_KEY</string>
    <string name="button_stop">Stop</string>
    <string name="text_speed_km">%d KM</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="geofence_radius_meters">Geofence Radius (meters)</string>
    <string name="radius_100m">Radius: 100m</string>
    <string name="add_geofence">Add Geofence</string>

</resources>