<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/timelineFragment"
      android:enabled="true"
      android:icon="@drawable/baseline_calendar_view_day_24"
      android:title="@string/text_label_1"/>
  <item
      android:id="@+id/favoritesFragment"
      android:enabled="true"
      android:icon="@drawable/baseline_favorite_24"
      android:title="@string/text_label_2"/>
  <item
      android:id="@+id/mapsFragment"
      android:enabled="true"
      android:icon="@drawable/baseline_map_24"
      android:title="@string/text_label_3"/>
  <item
      android:id="@+id/calendarFragment"
      android:enabled="true"
      android:icon="@drawable/baseline_calendar_today_24"
      android:title="@string/text_label_4"/>

</menu>